# MindVault

./: .gitignore
desktop/: pom.xml
desktop/src/main/java/com/mind/vault/: MindVaultApplication.java
desktop/src/main/java/com/mind/vault/config/: ApiConfig.java
desktop/src/main/java/com/mind/vault/controller/: IndexView.java  LeftDirectory.java  RightPreview.java
desktop/src/main/java/com/mind/vault/enums/: HttpCode.java
desktop/src/main/java/com/mind/vault/job/: TimedJob.java
desktop/src/main/java/com/mind/vault/model/: R.java
desktop/src/main/java/com/mind/vault/utils/: AlertConfirmUtil.java  ApiClient.java  Config.java
desktop/src/main/resources/: application.yml
desktop/src/main/resources/fxml/: index.fxml
desktop/src/main/resources/resources/: styles.css
desktop/src/test/java/com/mind/vault/: DesktopApplicationTests.java
server/: pyproject.toml  run.py
server/app/: main.py
server/app/api/v1/: api.py
server/app/api/v1/endpoints/: core.py  items.py
server/app/core/: config.py
server/app/crud/: base.py
server/app/db/: base.py  session.py
server/app/models/: item.py
server/app/pkg/: response.py
server/app/schemas/: item.py
