[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mindvault"
version = "0.1.0"
authors = [
  { name="caixiaorong", email="smart_r@163.com" }
]
description = "MindVault"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "fastapi>=0.100.0",
  "uvicorn>=0.23.2",
  "pydantic>=2.0.0",
  "sqlalchemy>=2.0.0",
  "python-dotenv>=1.0.0",
]
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
